--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body {
     min-width: 350px;
     min-height: 500px;
     grid-area: 1 / 1 / 2 / 2;
-    box-shadow: 0px 12px 20px -6px hsla(240, 0%, 0%, .15);
+    box-shadow: 0px 15px 25px -5px hsl(0deg 0% 0% / 24%);
     display: grid;
     place-items: center;
 }
